k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-catalog
spec:
  replicas: 2
  selector:
    matchLabels:
      service: book-catalog
  template:
    metadata:
      labels:
        service: book-catalog
    spec:
      containers:
      - image: ghcr.io/meachelleoluchi-ai/art:latest
        name: book-catalog
        ports:
        - name: http
          containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health/
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health/
            port: http
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
